Added new compact list mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -818,7 +818,7 @@ Type = Colorized
 
 [SongSearchTextPlaceholder]
 X = 405
-Y = 562
+Y = 565
 Color = GrayLight
 Size = 15
 Align = 1
@@ -2761,6 +2761,213 @@ Color = White
 Font = 1
 Size = 20
 Align = 1
+
+########################################################################################
+##### 																			   #####
+#####                   			      CompactList                              #####
+##### 																			   #####
+########################################################################################
+
+[SongCompactList]
+
+[SongCompactListBackground]
+Tex = SongBG
+
+[SongCompactListStaticNonParty1]
+Inheritance=SongListStaticNonParty1
+
+[SongCompactListTextCat]
+Inheritance = SongListTextCat
+
+[SongCompactListTextNonParty1]
+Inheritance = SongListTextNonParty1
+
+[SongCompactListSelectSong]
+Inheritance = SongListSelectSong
+H = 18
+
+[SongCompactListCover]
+Inheritance = SongListCover
+X = 20
+Y = 74
+W = 12
+H = 16
+Rows = 22
+Padding = 4
+
+[SongCompactListMainCover]
+Inheritance = SongListMainCover
+
+[SongCompactListEqualizer]
+Inheritance = SongListEqualizer
+H = 2
+
+[SongCompactListMedleyIcon]
+Inheritance = SongChessboardMedleyIcon
+X = 610
+
+[SongCompactListCalculatedMedleyIcon]
+Inheritance = SongChessboardCalculatedMedleyIcon
+X = 610
+
+[SongCompactListVideoIcon]
+Inheritance = SongChessboardVideoIcon
+X = 580
+
+[SongCompactListDuetIcon]
+Inheritance = SongChessboardDuetIcon
+X = 610
+
+[SongCompactListRapIcon]
+Inheritance = SongChessboardRapIcon
+X = 693
+
+[SongCompactListCreatorIcon]
+Inheritance = SongChessboardCreatorIcon
+X = 580
+
+[SongCompactListFixerIcon]
+Inheritance = SongChessboardFixerIcon
+X = 580
+
+[SongCompactListUnvalidatedIcon]
+Inheritance = SongChessboardUnvalidatedIcon
+
+[SongCompactListSearchIcon]
+Inheritance = SongListSearchIcon
+
+[SongCompactListSearchTextPlaceholder]
+Inheritance = SongListSearchTextPlaceholder
+
+[SongCompactListSearchText]
+Inheritance = SongListSearchText
+
+[SongCompactListTextArtist]
+Inheritance = SongListTextArtist
+X = 37
+
+[SongCompactListTextTitle]
+W = 0
+
+[SongCompactListTextNumber]
+Inheritance = SongListTextNumber
+
+[SongCompactListTextYear]
+Inheritance = SongChessboardTextYear
+X = 670
+
+[SongCompactListTextCreator]
+Inheritance = SongChessboardTextCreator
+X = 600
+
+[SongCompactListTextFixer]
+Inheritance = SongChessboardTextFixer
+X = 600
+
+[SongCompactListTextMyScores]
+Inheritance = SongListTextMyScores
+
+[SongCompactListTextWebsite]
+Inheritance = SongListTextWebsite
+
+[SongCompactListTextLocalScore1]
+Inheritance = SongListTextLocalScore1
+
+[SongCompactListTextLocalScore2]
+Inheritance = SongListTextLocalScore2
+
+[SongCompactListTextLocalScore3]
+Inheritance = SongListTextLocalScore3
+
+[SongCompactListTextUserLocalScore1]
+Inheritance = SongListTextUserLocalScore1
+
+[SongCompactListTextUserLocalScore2]
+Inheritance = SongListTextUserLocalScore1
+
+[SongCompactListTextUserLocalScore3]
+Inheritance = SongListTextUserLocalScore1
+
+[SongCompactListTextOnlineScore1]
+Inheritance = SongTextOnlineScore1
+
+[SongCompactListTextOnlineScore2]
+Inheritance = SongListTextOnlineScore1
+
+[SongCompactListTextOnlineScore3]
+Inheritance = SongListTextOnlineScore1
+
+[SongCompactListTextUserOnlineScore1]
+Inheritance = SongTextUserOnlineScore1
+
+[SongCompactListTextUserOnlineScore2]
+Inheritance = SongListTextUserOnlineScore1
+
+[SongCompactListTextUserOnlineScore3]
+Inheritance = SongListTextUserOnlineScore1
+
+#Duet singers
+[SongCompactListStatic2PlayersDuetSingerP1]
+Inheritance = SongListStatic2PlayersDuetSingerP1
+
+[SongCompactListStatic2PlayersDuetSingerP2]
+Inheritance = SongListStatic2PlayersDuetSingerP2
+
+[SongCompactListStatic3PlayersDuetSingerP1]
+Inheritance = SongListStatic3PlayersDuetSingerP1
+
+[SongCompactListStatic3PlayersDuetSingerP2]
+Inheritance = SongListStatic3PlayersDuetSingerP2
+
+[SongCompactListStatic3PlayersDuetSingerP3]
+Inheritance = SongListStatic3PlayersDuetSingerP3
+
+[SongCompactListStatic4PlayersDuetSingerP3]
+Inheritance = SongListStatic4PlayersDuetSingerP3
+
+[SongCompactListStatic4PlayersDuetSingerP4]
+Inheritance = SongListStatic4PlayersDuetSingerP4
+
+[SongCompactListStatic6PlayersDuetSingerP4]
+Inheritance = SongListStatic6PlayersDuetSingerP4
+
+[SongCompactListStatic6PlayersDuetSingerP5]
+Inheritance = SongListStatic6PlayersDuetSingerP5
+
+[SongCompactListStatic6PlayersDuetSingerP6]
+Inheritance = SongListStatic6PlayersDuetSingerP6
+
+[SongCompactListText2PlayersDuetSingerP1]
+Inheritance = SongListText2PlayersDuetSingerP1
+
+[SongCompactListText2PlayersDuetSingerP2]
+Inheritance = SongListText2PlayersDuetSingerP2
+
+[SongCompactListText3PlayersDuetSingerP1]
+Inheritance = SongListText3PlayersDuetSingerP1
+
+[SongCompactListText3PlayersDuetSingerP2]
+Inheritance = SongListText3PlayersDuetSingerP2
+
+[SongCompactListText3PlayersDuetSingerP3]
+Inheritance = SongListText3PlayersDuetSingerP3
+
+#Texts for Party Mode
+[SongCompactListTextParty1]
+Inheritance = PartyOptionsText1
+
+# Jokers, 3 for each team, only shown in party Mode
+[SongCompactListStaticTeamJoker]
+Inheritance = SongListStaticTeamJoker
+
+[SongCompactListTextPartyTime]
+Inheritance = SongListTextPartyTime
+
+[SongCompactListInfoMessageBG]
+Inheritance = SongListInfoMessageBG
+
+[SongCompactListInfoMessageText]
+Inheritance = SongListInfoMessageText
 
 ########################################################################################
 ##### 																			   #####
@@ -6466,7 +6673,7 @@ Inheritance = PartyOptionsText1
 [PartyPlayerSelectTeams]
 Inheritance = PartyOptionsSelectMode
 SBGW = 150
-X = 200 
+X = 200
 Y = 120
 Text = PARTY_TEAMS
 Fields = 2
@@ -8779,7 +8986,7 @@ Texts = 1
 
 
 [OptionsSelectSlide]
-Tex = 
+Tex =
 Type = Transparent
 TexSBG = SelectBG
 TypeSBG = Transparent
