Moved duets position to scores position in all song modes

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -843,7 +843,7 @@ Size = 30
 Text = ERROR_NO_SONGS
 
 [SongStaticDuetSinger]
-X = 535
+X = 320
 Y = 435
 W = 154
 H = 25
@@ -852,22 +852,16 @@ Type = Transparent
 
 [SongStatic2PlayersDuetSingerP1]
 Inheritance = SongStaticDuetSinger
-X = 535
-Y = 435
-Color = P1Dark
 Tex = SongDuetSinger
 
 [SongStatic2PlayersDuetSingerP2]
 Inheritance = SongStaticDuetSinger
-X = 535
 Y = 460
-Color = P2Dark
 Tex = SongDuetSinger2
 Reflection = 0
 
 [SongStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
-Y = 435
 
 [SongStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP1
@@ -877,35 +871,29 @@ Tex = SongDuetSinger3
 [SongStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic2PlayersDuetSingerP2
 Y = 485
-Color = P3Dark
 
 [SongStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic2PlayersDuetSingerP1
-X = 545
-Color = P3Dark
+X = 330
 
 [SongStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic2PlayersDuetSingerP2
-X = 545
-Color = P4Dark
+X = 330
 
 [SongStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic3PlayersDuetSingerP1
-X = 545
-Color = P4Dark
+X = 330
 
 [SongStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic3PlayersDuetSingerP2
-X = 545
-Color = P5Dark
+X = 330
 
 [SongStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic3PlayersDuetSingerP3
-X = 545
-Color = P6Dark
+X = 330
 
 [SongTextDuetSinger]
-X = 612
+X = 397
 Y = 440
 Font = 0
 Size = 13
@@ -914,7 +902,6 @@ Color = White
 
 [SongText2PlayersDuetSingerP1]
 Inheritance = SongTextDuetSinger
-Y = 440
 
 [SongText2PlayersDuetSingerP2]
 Inheritance = SongTextDuetSinger
@@ -922,14 +909,13 @@ Y = 467
 
 [SongText3PlayersDuetSingerP1]
 Inheritance = SongTextDuetSinger
-Y = 440
 
 [SongText3PlayersDuetSingerP2]
 Inheritance = SongTextDuetSinger
 Y = 466
 
 [SongText3PlayersDuetSingerP3]
-Inheritance = SongText2PlayersDuetSingerP2
+Inheritance = SongTextDuetSinger
 Y = 491
 
 [SongEqualizer]
@@ -2114,48 +2100,73 @@ Y = 315
 
 [SongSlotMachineStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
+X = 520
+Y = 255
 
 [SongSlotMachineStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
+X = 520
+Y = 280
 
 [SongSlotMachineStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
+X = 520
+Y = 255
 
 [SongSlotMachineStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
+X = 520
+Y = 280
 
 [SongSlotMachineStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
+X = 520
+Y = 305
 
 [SongSlotMachineStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
+X = 530
+Y = 255
 
 [SongSlotMachineStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
+X = 530
+Y = 280
 
 [SongSlotMachineStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
+X = 530
+Y = 255
 
 [SongSlotMachineStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
+X = 530
+Y = 280
 
 [SongSlotMachineStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
+X = 530
+Y = 305
 
 [SongSlotMachineText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
+X = 597
+Y = 260
 
 [SongSlotMachineText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
+X = 597
+Y = 287
 
 [SongSlotMachineText3PlayersDuetSingerP1]
-Inheritance = SongText3PlayersDuetSingerP1
+Inheritance = SongSlotMachineText2PlayersDuetSingerP1
 
 [SongSlotMachineText3PlayersDuetSingerP2]
-Inheritance = SongText3PlayersDuetSingerP2
+Inheritance = SongSlotMachineText2PlayersDuetSingerP2
 
 [SongSlotMachineText3PlayersDuetSingerP3]
-Inheritance = SongText3PlayersDuetSingerP3
+Inheritance = SongSlotMachineText2PlayersDuetSingerP2
+Y = 314
 
 #and these are the ones for partymode
 [SongSlotMachineTextParty1]
@@ -2652,77 +2663,77 @@ Y = 340
 [SongListStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
 X = 600
-Y = 415
+Y = 280
 
 [SongListStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
 X = 600
-Y = 440
+Y = 305
 
 [SongListStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
 X = 600
-Y = 410
+Y = 275
 
 [SongListStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
 X = 600
-Y = 435
+Y = 300
 
 [SongListStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
 X = 600
-Y = 460
+Y = 325
 
 [SongListStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
 X = 612
-Y = 415
+Y = 280
 
 [SongListStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
 X = 612
-Y = 440
+Y = 305
 
 [SongListStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
 X = 612
-Y = 410
+Y = 275
 
 [SongListStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
 X = 612
-Y = 435
+Y = 300
 
 [SongListStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
 X = 612
-Y = 460
+Y = 325
 
 [SongListText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
 X = 675
-Y = 420
+Y = 285
 
 [SongListText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
 X = 675
-Y = 445
+Y = 310
 
 [SongListText3PlayersDuetSingerP1]
 Inheritance = SongText3PlayersDuetSingerP1
 X = 675
-Y = 415
+Y = 280
 
 [SongListText3PlayersDuetSingerP2]
 Inheritance = SongText3PlayersDuetSingerP2
 X = 675
-Y = 440
+Y = 305
 
 [SongListText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
 X = 675
-Y = 465
+Y = 330
 
 #Texts for Party Mode
 [SongListTextParty1]
@@ -3169,78 +3180,48 @@ Y = 485
 #Duet singers
 [SongMosaicStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
-X = 615
-Y = 420
 
 [SongMosaicStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
-X = 615
-Y = 445
 
 [SongMosaicStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
-X = 615
-Y = 410
 
 [SongMosaicStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
-X = 615
-Y = 435
 
 [SongMosaicStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
-X = 615
-Y = 460
 
 [SongMosaicStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
-X = 625
-Y = 420
 
 [SongMosaicStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
-X = 625
-Y = 445
 
 [SongMosaicStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
-X = 625
-Y = 410
 
 [SongMosaicStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
-X = 625
-Y = 435
 
 [SongMosaicStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
-X = 625
-Y = 460
 
 [SongMosaicText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
-X = 692
-Y = 425
 
 [SongMosaicText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
-X = 692
-Y = 450
 
 [SongMosaicText3PlayersDuetSingerP1]
 Inheritance = SongText3PlayersDuetSingerP1
-X = 692
-Y = 415
 
 [SongMosaicText3PlayersDuetSingerP2]
 Inheritance = SongText3PlayersDuetSingerP2
-X = 692
-Y = 440
 
 [SongMosaicText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
-X = 692
-Y = 465
 
 #and these are the ones for partymode
 [SongMosaicTextParty1]
