Updated Argon theme
Updated list & compactlist screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -2443,10 +2443,10 @@ Tex = SongBG
 
 [SongListStaticNonParty1]
 X = 555
-Y = 0
+Y = 65
 W = 245
-H = 600
-Z = 0.95
+H = 480
+Z = 0.10
 Alpha = 0.75
 Color = ColorLight
 Tex = SongSelection2
@@ -2500,12 +2500,12 @@ Type = Transparent
 [SongListEqualizer]
 Inheritance = SongEqualizer
 X = 570
-Y = 538
+Y = 540
 Bands = 36
 W = 5
-H = 4
+H = 5
 Length = 23
-ReflectionSpacing = 1
+ReflectionSpacing = 0
 
 [SongListMedleyIcon]
 Inheritance = SongMedleyIcon
@@ -2541,11 +2541,13 @@ Z = 1
 Inheritance = SongCreatorIcon
 X = 580
 Y = 380
+Z = 1
 
 [SongListFixerIcon]
 Inheritance = SongFixerIcon
 X = 580
 Y = 405
+Z = 1
 
 [SongListUnvalidatedIcon]
 ;Inheritance = SongUnvalidatedIcon
@@ -2560,7 +2562,8 @@ X = 295
 
 [SongListSearchText]
 Inheritance = SongSearchText
-X = 150
+X = 155
+Y = 564
 
 [SongListTextArtist]
 Inheritance = SongRouletteTextArtist
@@ -2742,8 +2745,9 @@ Inheritance = PartyOptionsText1
 # Jokers, 3 for each team, only shown in party Mode
 [SongListStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
-X = 570
+X = 600
 Y = 260
+Z = 1
 PaddingX = 10
 
 [SongListTextPartyTime]
@@ -2795,16 +2799,16 @@ Inheritance = SongListTextNonParty1
 
 [SongCompactListSelectSong]
 Inheritance = SongListSelectSong
-H = 18
+H = 24
 
 [SongCompactListCover]
 Inheritance = SongListCover
-X = 20
-Y = 74
-W = 12
-H = 16
-Rows = 22
-Padding = 4
+X = 30
+Y = 72
+W = 15
+H = 20
+Rows = 18
+Padding = 6
 
 [SongCompactListMainCover]
 Inheritance = SongListMainCover
@@ -2855,7 +2859,9 @@ Inheritance = SongListSearchText
 
 [SongCompactListTextArtist]
 Inheritance = SongListTextArtist
-X = 37
+Size = 15
+Font = 0
+X = 50
 
 [SongCompactListTextTitle]
 W = 0
@@ -2894,28 +2900,28 @@ Inheritance = SongListTextLocalScore3
 Inheritance = SongListTextUserLocalScore1
 
 [SongCompactListTextUserLocalScore2]
-Inheritance = SongListTextUserLocalScore1
+Inheritance = SongListTextUserLocalScore2
 
 [SongCompactListTextUserLocalScore3]
-Inheritance = SongListTextUserLocalScore1
+Inheritance = SongListTextUserLocalScore3
 
 [SongCompactListTextOnlineScore1]
-Inheritance = SongTextOnlineScore1
+Inheritance = SongListTextOnlineScore1
 
 [SongCompactListTextOnlineScore2]
-Inheritance = SongListTextOnlineScore1
+Inheritance = SongListTextOnlineScore2
 
 [SongCompactListTextOnlineScore3]
-Inheritance = SongListTextOnlineScore1
+Inheritance = SongListTextOnlineScore3
 
 [SongCompactListTextUserOnlineScore1]
-Inheritance = SongTextUserOnlineScore1
+Inheritance = SongListTextUserOnlineScore1
 
 [SongCompactListTextUserOnlineScore2]
-Inheritance = SongListTextUserOnlineScore1
+Inheritance = SongListTextUserOnlineScore2
 
 [SongCompactListTextUserOnlineScore3]
-Inheritance = SongListTextUserOnlineScore1
+Inheritance = SongListTextUserOnlineScore3
 
 #Duet singers
 [SongCompactListStatic2PlayersDuetSingerP1]
@@ -6586,10 +6592,10 @@ Texts = 5
 Tex = PartyBG
 
 [PartyOptionsText1]
-X = 30
-Y = 30
+X = 15
+Y = 20
 Font = 0
-Size = 35
+Size = 30
 Color = White
 Text = PARTY_MODE
 
