First version of song folder manager and update some translations

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8949,6 +8949,21 @@ Text = C_PROFILES
 X = 23
 Y = 75
 
+[OptionsButtonSongdirs]
+Inheritance = OptionsButton
+X = 430
+Y = 440
+W = 60
+H = 50
+SelectH = 40
+Tex = Optionsbuttonsongdirs
+
+[OptionsButtonSongdirsText1]
+Inheritance = OptionsButtonGeneralText
+Text = C_SONGDIRS
+X = 30
+Y = 65
+
 [OptionsButtonExit]
 Inheritance = OptionsButton
 X = 730
@@ -9965,6 +9980,94 @@ Y = 330
 
 [InsertUserPopupButton2Text1]
 Inheritance = SendScorePopupButton2Text1
+
+## ##########################################################################################################################################
+## Songdirs
+## ##########################################################################################################################################
+
+[OptionsSongdirs]
+Texts = 5
+
+[OptionsSongdirsBackground]
+Tex = OptionsGeneralBG
+
+[OptionsSongdirsStatic1]
+Inheritance = OptionsMenuBG
+
+[OptionsSongdirsText1]
+Inheritance = OptionsTitleText
+Text = C_SONGDIRS
+
+[OptionsSongdirsStatic2]
+X = 50
+Y = 100
+W = 650
+H = 365
+Color = White
+Tex = Picker
+Type = Transparent #Colorized
+
+[OptionsSongdirsStatic3]
+X = 50
+Y = 510
+W = 650
+H = 40
+Color = White
+Tex = MainBar
+Type = Colorized
+
+[OptionsSongdirsButtonAdd]
+Inheritance = OptionsButton
+X = 710
+Y = 500
+Tex = Songdirsbuttonadd
+
+[OptionsSongdirsButtonDelete]
+Inheritance = OptionsButton
+X = 710
+Y = 250
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsButtonSave]
+Inheritance = OptionsButton
+X = 740
+Y = 140
+W = 20
+H = 20
+SelectH = 15
+Tex = Songdirsbuttonsave
+
+[OptionsSongdirsButtonSaveRed]
+Inheritance = OptionsButton
+X = 740
+Y = 140
+W = 20
+H = 20
+SelectH = 15
+Tex = Songdirsbuttonsavered
+
+[OptionsSongdirsButtonExit]
+Inheritance = OptionsButtonExit2
+
+[OptionsSongdirsButtonFolderName]
+X = 50
+Y = 500
+W = 650
+H = 40
+Tex = Button
+Color = ColorLight
+DColor = ColorDark
+Type = Transparent
+Texts = 1
+
+[OptionsSongdirsButtonFolderNameText1]
+X = 30
+Y = 10
+Font = 0
+Size = 22
+Align = 0  ## Left
+Color = White
+
 
 [AboutMain]
 Texts = 2
