--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -164,11 +164,18 @@ Optionsbuttonadvanced    = [Options]buttonadvanced.svg
 Optionsbuttonnetwork     = [Options]buttonnetwork.svg
 Optionsbuttonwebcam      = [Options]buttonwebcam.svg
 Optionsbuttonprofiles    = [Options]buttonprofiles.svg
+Optionsbuttonsongdirs    = [Options]buttonsongdirs.jpg
 
 SelectBG                 = [Options]SelectBG.svg
 
 Optionsbuttoninsert      = [Options]buttoninsert.png
 Optionsbuttondelete      = [Options]buttondelete.png
+
+# # # S O N G D I R S # # #
+Songdirsbuttonadd = [Songdirs]buttonplus.svg
+Songdirsbuttondelete = [Songdirs]buttonminus.svg
+Songdirsbuttonsave = [Songdirs]buttonsave.png
+Songdirsbuttonsavered = [Songdirs]buttonsavered.png
 
 # # # M A I N   P A R T Y # # #
 TournamentButton  =[tournament]trophy.png
