Updated Argon theme

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 23.01
+Text = UltraStar WorldParty 23.03
 
 [MainText2]
 X = 5
@@ -230,6 +230,7 @@ Text = C_OPTIONS
 [MainButtonExit]
 Inheritance = MainIconButton
 X = 535
+W = 35
 Tex = ButtonExit
 
 [MainButtonExitText1]
@@ -807,9 +808,9 @@ Size = 20
 
 [SongSearchIcon]
 X = 240
-Y = 560
+Y = 555
 W = 320
-H = 26
+H = 35
 Alpha = 0.6
 Color = ColorDark
 DColor = White
@@ -825,8 +826,8 @@ Align = 1
 Text = SONG_SEARCH_DESC
 
 [SongSearchText]
-X = 265
-Y = 559
+X = 274
+Y = 563
 Color = White
 Font = 0
 Size = 17
@@ -1459,7 +1460,7 @@ Inheritance = SongUnvalidatedIcon
 [SongChessboardSearchIcon]
 Inheritance = SongSearchIcon
 X = 330
-Y = 563
+Y = 559
 
 [SongChessboardSearchTextPlaceholder]
 Inheritance = SongSearchTextPlaceholder
@@ -3280,13 +3281,14 @@ ColR=1
 ColB=1
 ColG=1
 
+
 [SingStatic1]
 ;TextBG
 Tex = LyricBar
 X = 0
 Y = 490
-W = 800
-H = 110
+W = 801
+H = 111
 Color = ColorDark
 Type = Transparent
 
@@ -3296,7 +3298,7 @@ Tex = TimeBar1
 X = 20
 Y = 594
 W = 730
-H = 2
+H = 3
 Color = White
 Type = Transparent
 
@@ -8836,9 +8838,10 @@ Text = C_GENERAL
 [OptionsButtonGraphics]
 Inheritance = OptionsButton
 X = 265
-Y = 120
+Y = 115
 W = 60
-H = 60
+H = 77
+SelectH = 72
 Tex = Optionsbuttongraphics
 
 [OptionsButtonGraphicsText1]
@@ -8848,15 +8851,15 @@ Y = 75
 
 [OptionsButtonSound]
 Inheritance = OptionsButton
-X = 442
+X = 435
 Y = 120
-W = 32
+W = 44
 Tex = Optionsbuttonsound
 
 [OptionsButtonSoundText1]
 Inheritance = OptionsButtonGeneralText
 Text = C_SOUND
-X = 18
+X = 23
 Y = 75
 
 [OptionsButtonLyrics]
@@ -8888,15 +8891,15 @@ Y = 75
 
 [OptionsButtonMicrophones]
 Inheritance = OptionsButton
-X = 275
+X = 270
 Y = 275
-W = 40
+W = 50
 Tex = Optionsbuttonmicrophones
 
 [OptionsButtonMicrophonesText1]
 Inheritance = OptionsButtonGeneralText
 Text = C_MICROPHONES
-X = 20
+X = 25
 Y = 75
 
 [OptionsButtonAdvanced]
@@ -8938,9 +8941,9 @@ Y = 60
 
 [OptionsButtonProfiles]
 Inheritance = OptionsButton
-X = 275
+X = 272
 Y = 432
-W = 40
+W = 45
 Tex = Optionsbuttonprofiles
 
 [OptionsButtonProfilesText1]
@@ -8951,17 +8954,17 @@ Y = 75
 
 [OptionsButtonSongdirs]
 Inheritance = OptionsButton
-X = 430
-Y = 440
-W = 60
-H = 50
-SelectH = 40
-Tex = Optionsbuttonsongdirs
+X = 435
+Y = 435
+W = 50
+H = 55
+SelectH = 50
+Tex = Optionsbuttonsongdir
 
 [OptionsButtonSongdirsText1]
 Inheritance = OptionsButtonGeneralText
 Text = C_SONGDIRS
-X = 30
+X = 25
 Y = 65
 
 [OptionsButtonExit]
