--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -97,7 +97,7 @@ LyricHelpBar   = [sing]lyricsHelpBar.svg
 TimeBar1      = [sing]timeBarBG.svg
 
 #the time progress bar
-TimeBar      = [sing]timeBar.jpg
+TimeBar      = [sing]timeBar.svg
 
 #linebonus, the thing that pop ups at the score
 LineBonusBack  = [sing]lineBonusPopUp.png
@@ -164,7 +164,7 @@ Optionsbuttonadvanced    = [Options]buttonadvanced.svg
 Optionsbuttonnetwork     = [Options]buttonnetwork.svg
 Optionsbuttonwebcam      = [Options]buttonwebcam.svg
 Optionsbuttonprofiles    = [Options]buttonprofiles.svg
-Optionsbuttonsongdirs    = [Options]buttonsongdirs.jpg
+Optionsbuttonsongdir     = [Options]buttonsongdir.svg
 
 SelectBG                 = [Options]SelectBG.svg
 
