--- a/game/themes/common/Static Violet.ini
+++ b/game/themes/common/Static Violet.ini
@@ -16,28 +16,15 @@ Name=Static Violet
 Color=Violet
 
 [Textures]
-/**
- * Interface
- */
-interface_dialog_background = [interface]dialog_background.svg
 
+# # # Interface # # # 
+interface_dialog_background = [interface]dialog_background.svg
 Cursor = cursor.svg
 Cursor_Pressed = cursor2.svg
 ButtonClose = buttonclose.svg
 
-/**
- * Icons
- */
-icon_song_search      = [icon]song_search.svg
-icon_song_video       = [icon]song_video.png
-icon_song_medley      = [icon]song_medley.png
-icon_song_duet        = [icon]song_duet.png
-icon_song_rap         = [icon]song_rap.png
-icon_song_createdby   = [icon]song_createdby.png
-icon_song_fixedby     = [icon]song_fixedby.png
-icon_song_unvalidated = [icon]song_unvalidated.png
 
-# # # M A I N # # #
+# # # MAIN # # #
 ButtonFrameBG    = [main]buttonframeBG.png
 ButtonSoloBG     = [main]buttonsolo.svg
 ButtonPartyBG    = [main]buttonparty.svg
@@ -71,7 +58,7 @@ OptionsInternetBG      = [bg-options]internet.jpg
 OptionsWebcamBG        = [bg-options]webcam.jpg
 OptionsProfilesBG      = [bg-options]profiles.jpg
 
-# # # S O N G S E L E C E T # # #
+# # # SONG SELECT # # #
 SongSelection1up = [main]songSelection1up.svg
 SongSelection1dn = [main]songSelection1dn.svg
 SongSelection2 = [main]songSelection2.svg
@@ -85,7 +72,17 @@ SongDuetSinger3 = [song]duetsinger3.png
 
 Menubg = [menu]bg.png
 
-# # # S I N G # # #
+# # Icons Legend # #
+icon_song_search      = [icon]song_search.svg
+icon_song_video       = [icon]song_video.png
+icon_song_medley      = [icon]song_medley.png
+icon_song_duet        = [icon]song_duet.png
+icon_song_rap         = [icon]song_rap.png
+icon_song_createdby   = [icon]song_createdby.png
+icon_song_fixedby     = [icon]song_fixedby.png
+icon_song_unvalidated = [icon]song_unvalidated.png
+
+# # # SING # # #
 #the bar where the lyrics reside
 LyricBar       = [sing]textBar.svg
 LyricBarDuet   = [sing]textBar.png
@@ -97,7 +94,7 @@ LyricHelpBar   = [sing]lyricsHelpBar.svg
 TimeBar1      = [sing]timeBarBG.svg
 
 #the time progress bar
-TimeBar      = [sing]timeBar.jpg
+TimeBar      = [sing]timeBar.svg
 
 #linebonus, the thing that pop ups at the score
 LineBonusBack  = [sing]lineBonusPopUp.png
@@ -120,7 +117,7 @@ Ball           = [sing]LyricsBall.png
 SongName       = [sing]SongName.png
 
 
-# # # S C O R E / T O P 5 # # #
+# # # SCORE / TOP5 # # #
 ScoreBox        = [score]box.png
 ScoreGlassBox   = [score]glass_box.png
 ScoreLevel      = [score]level.png
@@ -153,7 +150,7 @@ Rating_5 = [score]rating_5.png
 Rating_6 = [score]rating_6.png
 Rating_7 = [score]rating_7.png
 
-# # # O P T I O N S # # #
+# # # OPTIONS # # #
 Optionsbuttongeneral     = [Options]buttongeneral.svg
 Optionsbuttongraphics    = [Options]buttongraphics.svg
 Optionsbuttonsound       = [Options]buttonsound.svg
@@ -164,16 +161,23 @@ Optionsbuttonadvanced    = [Options]buttonadvanced.svg
 Optionsbuttonnetwork     = [Options]buttonnetwork.svg
 Optionsbuttonwebcam      = [Options]buttonwebcam.svg
 Optionsbuttonprofiles    = [Options]buttonprofiles.svg
+Optionsbuttonsongdir     = [Options]buttonsongdir.svg
 
 SelectBG                 = [Options]SelectBG.svg
 
 Optionsbuttoninsert      = [Options]buttoninsert.png
 Optionsbuttondelete      = [Options]buttondelete.png
 
-# # # M A I N   P A R T Y # # #
+# # # SONGDIRS # # #
+Songdirsbuttonadd = [Songdirs]buttonplus.svg
+Songdirsbuttondelete = [Songdirs]buttonminus.svg
+Songdirsbuttonsave = [Songdirs]buttonsave.png
+Songdirsbuttonsavered = [Songdirs]buttonsavered.png
+
+# # # MAIN   PARTY # # #
 TournamentButton  =[tournament]trophy.png
 
-# # # P A R T Y # # #
+# # # PARTY # # #
 Joker             =[party]Joker.png
 PartyPlayerButton =[party]playerButton.png
 PartyTeamButton1  =[party]roundTeamButton.png
@@ -198,11 +202,11 @@ PartyTrophy			=[tournament]trophy.png
 PartyWinner			=[tournament]winner.png
 
 
-# # # B A C K G R O U N D S # # #
+# # # BACKGROUNDS # # #
 SongMenuBG  = [menu]songMenuBg.png
 SongMenuSelectBG  = [menu]songMenuSelectBg.png
 
-# # # N O T E S # # #
+# # # NOTES # # #
 # sung notes - colorized with playercolors
 GrayLeft       = [sing]notesLeft.png
 GrayMid        = [sing]notesMid.png
@@ -227,20 +231,15 @@ NoteBGLeftRap     = [rap]notesBgLeft.png
 NoteBGMidRap      = [rap]notesBgMid.png
 NoteBGRightRap    = [rap]notesBgRight.png
 
-# # # E F F E C T S # # #
+# # # EFFECTS # # #
 NoteStar        = [effect]goldenNoteStar.png
 NotePerfectStar = [effect]perfectNoteStar.png
 
 
-# # # dirty helpers # # #
-Rectangle  = [button]rectangle.png
-ButtonFade = [helper]buttonFade.png
-
-
 # # # DOWNLOAD SCORE # # #
-ProgressBar  = [sing]timeBar.jpg
+ProgressBar  = [sing]timeBar.svg
 
-# # # J U K E B O X # # #
+# # # JUKEBOX # # #
 JukeboxTimeBar1  = [jukebox]timeBarBG.png
 JukeboxTimeBar = [jukebox]timeBar.jpg
 JukeboxSong = [jukebox]song.png
@@ -269,7 +268,7 @@ JukeboxButton = [jukebox]mainBar.png
 Picker   = [color]picker.jpg
 Pointer = [color]pointer.png
 
-# # # P L A Y E R   S E L E C T I O N # # #
+# # # PLAYER   SELECTION # # #
 AvatarFrame = [name]frame.png
 CurrentPlayer = [name]player.png
 SelectFrame = [name]select.png
@@ -283,14 +282,18 @@ NoAvatar_P4  = [profiles]noavatar.svg
 NoAvatar_P5  = [profiles]noavatar.svg
 NoAvatar_P6  = [profiles]noavatar.svg
 
-# # # A B O U T # # #
+# # # ABOUT # # #
 LogoWeb = [About]logo_web.png
 AboutBG = [About]helperbg2.png
 
-# # # D E V E L O P E R S # # #
+# # # DEVELOPERS # # #
 Dhelperbg = [Developers]helperbg.png
 
-# # # C O M M O N # # #
+# # # Dirty Helpers # # #
+Rectangle  = [button]rectangle.png
+ButtonFade = [helper]buttonFade.png
+
+# # # COMMON # # #
 
 AuxColor = auxcolor.svg
 
@@ -308,4 +311,5 @@ RoundedDN  = roundeddn.svg
 
 Select_ArrowLeft = [interface]select_arrow_left.svg
 Select_ArrowRight = [interface]select_arrow_right.svg
+
 
