fixed font size which didn't fit

--- a/game/fonts/fonts.ini
+++ b/game/fonts/fonts.ini
@@ -50,12 +50,14 @@ LineSpacing=1.1
 
 [Font_Outline1]
 File=Roboto/Roboto-Bold.ttf
+GlyphSpacing=1
 Outline=0.06
 Stretch=0.8
 LineSpacing=1.1
 
 [Font_Outline2]
 File=Roboto/Roboto-Bold.ttf
+GlyphSpacing=0.9
 Outline=0.09
 Stretch=0.8
 LineSpacing=1.1
